fix overflow problem

--- a/src/app/location/location.component.scss
+++ b/src/app/location/location.component.scss
@@ -1,3 +1,10 @@
+@media (min-width: 768px) {
+  .content {
+    max-height: calc(100vh - 56px);
+    overflow: hidden;
+  }
+}
+
 .countries-list {
   max-height: 200px;
   overflow-y: auto;
